--- a/Buck_index.html
+++ b/Buck_index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Web Page ha ha im a title hehe hgjhjg</title>
+        <title>Who is Garrett Buck?</title>
         
     </head>
 </html>
