update for reorganization

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Who is Garrett Buck?</title>
-        
+        <h1>
+            My new site
+        </h1>
     </head>
 </html>
