--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Who is Garrett Buck?</title>
-        <h1>
-            My new site
-        </h1>
+        <title>Home</title>
     </head>
+
+    <header>
+        <h1>
+            Who is Garrett Buck?
+        </h1>
+    </header>
+
+    <body>
+        <p>Hi there I am a junior at Mount St. Mary's University</p>
+    </body>
+
+
+
+
+
+
+
+
+
+
+
+
 </html>
