image link update

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li class="menu_li"><a href="art.html">Art Courses</a></li>
         </ul>
         <hr class="men_bot">
-        <img id="headshot_img" class="headshot_image" src="headshot.jpg" alt="Headshot of Garrett Buck">
+        <img id="headshot_img" class="headshot_image" src="headshot.JPG" alt="Headshot of Garrett Buck">
 
         <p class="home_text" id="test">Hello and welcome to my website! 
             <br>
